--- a/package.json
+++ b/package.json
@@ -10,11 +10,30 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
+    "expo-av": "~11.2.3",
+    "expo-camera": "~12.2.0",
+    "expo-constants": "~13.1.1",
+    "expo-linear-gradient": "~11.3.0",
+    "expo-media-library": "~14.1.0",
+    "expo-navigation-bar": "~1.2.0",
+    "expo-sharing": "~10.2.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "9.6.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-countdown-circle-timer": "^3.0.9",
+    "react-native-pager-view": "5.4.15",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
